minor fix in small screen (2 continer overlap)

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ body {
 h3.sub-title{
     margin-bottom: 0px;
     font-size: 50px;
-    margin-top: 80px;
+    margin-top: 100px;
 }
 
 .flex-item {
